update navbar - sidebar phone scale

--- a/public/app.html
+++ b/public/app.html
@@ -28,47 +28,60 @@
             </ul>
           </div>
 
-          <div class="bg-slate-200 absolute top-0 left-0 right-0">
-            <section class="divide-y divide-gray-800 px-4" >
-              <header class="flex justify-between items-center py-6">
-                <div class="flex">
+          <div class="bg-white absolute top-0 left-0 right-0 px-2">
+            <section class="divide-y divide-gray-200 px-4" >
+              <header class="flex justify-between items-center py-4 flex-row-reverse">
+                <div class="flex bg-white">
                   <span class="material-symbols-outlined">
                     close
                     </span>
                 </div>
               </header>
-              <content>
-                <div>
-                  <div class="flex gap-2" ><span class="material-symbols-outlined">
+
+              <content class=" divide-y divide-gray-200">
+                <a href="#" class="flex justify-between items-center mt-2 mb-6 ">
+                  <div class="flex gap-2 items-center" ><span class="material-symbols-outlined bg-slate-300 p-1 rounded-md text-white">
                     person
-                    </span><p>Login/Daftar</p></div>
+                    </span><p >Login / Daftar</p></div>
                   <span class="material-symbols-outlined">
                     chevron_right
                     </span>
-                </div>
-                <ul>
+                </a>
+                
+                <ul class=" py-2">
                   <li>
-                    <div><P>STORe</P><span class="material-symbols-outlined">
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>Store</P><span class="material-symbols-outlined text-black">
                       chevron_right
-                      </span></div>
+                      </span></a>
                   </li>
-                  <li><div><p>smartphone</p><span class="material-symbols-outlined">
-                    add
-                    </span></div></li>
-                  <li><p>smart home</p><span class="material-symbols-outlined">
-                    add
-                    </span></li>
-                  <li><p>lifestyle</p><span class="material-symbols-outlined">
-                    add
-                    </span</li>
-                  <li><p>discover</p><span class="material-symbols-outlined">
-                    chevron_right
-                    </span></li>
-                  <li><P>support</P><span class="material-symbols-outlined">
-                    chevron_right
-                    </span></li>
+                  <li>
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>Smartphone</P><span class="material-symbols-outlined">
+                      add
+                      </span></a>
+                  </li>
+                  <li>
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>Smart Home</P><span class="material-symbols-outlined">
+                      add
+                      </span></a>
+                  </li>
+                  <li>
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>LifeStyle</P><span class="material-symbols-outlined">
+                      add
+                      </span></a>
+                  </li>
+                  <li>
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>Discover</P><span class="material-symbols-outlined text-black">
+                      chevron_right
+                      </span></a>
+                  </li>
+                  <li>
+                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P>Support</P><span class="material-symbols-outlined text-black">
+                      chevron_right
+                      </span></a>
+                  </li>
                 </ul>
               </content>
+
               <footer>
                 <ul>
                   <li><p>produk</p><span class="material-symbols-outlined">
