adding feature - 'dropdown menu on smarthome & lifestyle nav menu phone media'

--- a/public/app.html
+++ b/public/app.html
@@ -59,7 +59,7 @@
                       add
                       </span></a>
 
-                      <div  class="bg-gray-100 w-full my-2 p-2 divide-y divide-gray-300 rounded-lg" >
+                      <div  class="bg-gray-100 w-full my-2 py-2 px-6 divide-y divide-gray-300 rounded-lg" >
                         <ul class="grid grid-cols-4">
                           <li class=""><a href="#" class=" flex justify-center items-center py-6"><p>Redmi</p></a></li>
                           <li><a href="#" class=" flex justify-center items-center py-6"><p>POCO</p></a></li>
@@ -74,11 +74,76 @@
                     <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P class="font-bold">Smart Home</P><span class="material-symbols-outlined">
                       add
                       </span></a>
+
+                      <div class="bg-gray-100 w-full my-2 py-2 px-6 divide-y divide-gray-300 rounded-lg">
+                        <ul class="grid grid-cols-3">
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined rotate-90">
+                            tablet_mac
+                            </span><p class="text-xs">Pad</p></a>
+                          </li>
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
+                            desktop_windows
+                            </span><p class="text-xs">TV & Media</p></a>
+                          </li>
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
+                            mode_fan
+                            </span><p class="text-xs">Purifier & Humidifier</p></a>
+                          </li>
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
+                            camera_video
+                            </span><p class="text-xs">Kamera Keamanan</p></a>
+                          </li>
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
+                            vacuum
+                            </span><p class="text-xs">Penyedot Debu</p></a>
+                          </li>
+                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
+                            microwave_gen
+                            </span><p class="text-xs">Peralatan Dapur</p></a>
+
+                          </li>
+                        </ul>
+                        <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
+                          chevron_right
+                          </span></a></div>
+                      </div>
                   </li>
                   <li>
                     <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P class="font-bold">LifeStyle</P><span class="material-symbols-outlined">
                       add
                       </span></a>
+
+                      <div class="bg-gray-100 w-full my-2 py-2 px-6 divide-y divide-gray-300 rounded-lg">
+                        <ul class="grid grid-cols-3">
+                          <li>
+                            <a href="#" class="flex flex-col justify-center items-center py-4">
+                              <span class="material-symbols-outlined">
+                                watch
+                                </span><p class="text-xs">Wearable</p></a>
+                          </li>
+                          <li>
+                            <a href="#" class="flex flex-col justify-center items-center py-4">
+                              <span class="material-symbols-outlined">
+                            computer
+                            </span><p class="text-xs">Kantor</p></a>
+                          </li>
+                          <li>
+                            <a href="#" class="flex flex-col justify-center items-center py-4">
+                              <span class="material-symbols-outlined">
+                                health_and_beauty
+                                </span><p class="text-xs">Perawatan Pribardi</p></a>
+                          </li>
+                          <li>
+                            <a href="#" class="flex flex-col justify-center items-center py-4">
+                              <span class="material-symbols-outlined">
+                                electrical_services
+                                </span><p class="text-xs">Aksesori</p></a>
+                          </li>
+                        </ul>
+                        <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
+                          chevron_right
+                          </span></a></div>
+                      </div>
                   </li>
                   <li>
                     <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500"><P class="font-bold">Discover</P><span class="material-symbols-outlined text-black">
