responsive navbar to sidebar - REV-1

--- a/public/app.html
+++ b/public/app.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="root">
+    <!-- ========== Header ========== -->
     <header class="">
       <nav class="flex gap-4 justify-between items-center px-6 py-4 relative  lg:py-2  lg:px-8 lg:justify-normal xl:w-[80%] xl:m-auto">
         <div id="logo"><img class="h-7 min-w-min rounded-lg" src="../assets/img/xiaomi-logo.jpg" alt=""></div>
@@ -24,14 +25,14 @@
             <li class="lg:hidden"><span class="material-symbols-outlined">
               menu
               </span></li>
-            <li class=""><span class="material-symbols-outlined">
+            <li class="hidden lg:block"><span class="material-symbols-outlined">
               person
               </span></li>
             
             </ul>
           </div>
 
-          <div class=" absolute top-0 left-0 right-0 px-2 bg-white lg:static lg:px-0 w-full">
+          <div class="hidden absolute top-0 left-0 right-0 px-2 bg-white lg:static lg:px-0 w-full lg:block">
             <section class="divide-y divide-gray-200 px-4 lg:grid lg:px-0 lg:divide-none" >
 <!-- ===== Close sidebar Button ===== -->
               <header class="flex justify-between items-center py-4 flex-row-reverse lg:hidden">
@@ -185,6 +186,11 @@
           </div>
         </nav>
     </header>
+
+    <!-- =============== Main ============== -->
+    <main>
+      
+    </main>
   </div>
 
 
