When the smartphone nav button is clicked it brings up a dropdown

--- a/public/app.html
+++ b/public/app.html
@@ -62,21 +62,23 @@
                       </span></a>
                   </li>
 <!-- ===== Smartphone Nav ===== -->
-                  <li>
-                    <a href="#" class="flex justify-between items-center py-2  focus:text-orange-500  lg:justify-center"><P class="font-bold">Smartphone</P><span class="material-symbols-outlined lg:hidden">
+                  <li id="smartphone-nav">
+                    <a id="smartphone-nav-a"  href="#" class="flex justify-between items-center py-2 lg:justify-center"><P class="font-bold">Smartphone</P><span id="smartphone-nav-simbol" class="material-symbols-outlined text-black lg:hidden">
                       add
-                      </span></a>
+                      </span>
+                    </a>
 <!-- ======= Dropdown Smartphone ========= -->
-                      <div  class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg" >
-                        <ul class="grid grid-cols-4">
-                          <li class=""><a href="#" class=" flex justify-center items-center py-6"><p>Redmi</p></a></li>
-                          <li><a href="#" class=" flex justify-center items-center py-6"><p>POCO</p></a></li>
-                          <li><a href="#" class=" flex justify-center items-center py-6"><p>Xiaomi</p></a></li>
-                        </ul>
-                        <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
-                          chevron_right
-                          </span></a></div>
+                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg" >
+                      <ul class="grid grid-cols-4">
+                        <li class=""><a href="#" class=" flex justify-center items-center py-6"><p>Redmi</p></a></li>
+                        <li><a href="#" class=" flex justify-center items-center py-6"><p>POCO</p></a></li>
+                        <li><a href="#" class=" flex justify-center items-center py-6"><p>Xiaomi</p></a></li>
+                      </ul>
+                      <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
+                        chevron_right
+                        </span></a>
                       </div>
+                    </div>
                   </li>
 <!-- ===== Smart Home Nav ===== -->
                   <li>
